--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "marked": "^4.1.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
