--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "marked": "^4.1.1",
+    "markdown-it": "^13.0.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
