--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "highlight.js": "^11.6.0",
     "markdown-it": "^13.0.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
