--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
+    "element-plus": "^2.2.19",
     "highlight.js": "^11.6.0",
     "markdown-it": "^13.0.1",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "typescript": "^4.8.4",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
     "vite": "^3.1.8"
   }
 }
